# src/modules/mahasiswa/mahasiswa.routes.js
@@ -1,10 +1,14 @@
 const express = require('express');
 const mahasiswaController = require('./mahasiswa.controller');
+const authMiddleware = require('../../middleware/authMiddleware'); // Import middleware
 
 const router = express.Router();
 
-// Route baru untuk login
+// Route baru untuk login (TIDAK PERLU AUTH)
 router.post('/login', mahasiswaController.login);
+
+// Menerapkan middleware auth ke semua route di bawah ini
+router.use(authMiddleware);
 
 // Route untuk mendapatkan semua data mahasiswa
 router.get('/list', mahasiswaController.getAllMahasiswa);
